--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -433,6 +433,19 @@ a:hover::after,
   }
 }
 
+.fade-in-section {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1.2s ease-out, transform .6s ease-out,
+    visibility 1.2s ease-out;
+  will-change: opacity, transform, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
 @keyframes fade-in {
   0% { opacity: 0; }
   100% { opacity: 1; }
